--- a/src/Pages/RegisterPage/RegisterPage.css
+++ b/src/Pages/RegisterPage/RegisterPage.css
@@ -8,7 +8,7 @@
     
 }
 .container-form{
-    background-color:#fff;
+    background-color:#1f1a1a;
     width:600px;
     min-height: 430px;
     border-radius: 10px;
@@ -17,10 +17,13 @@
 }
 .container-form h1{
     font-weight: 500;
-    background: linear-gradient(107deg, rgb(255, 67, 5) 11.1%, rgb(245, 135, 0) 95.3%);
-    color:rgba(0, 0, 0, 0);
+    background: linear-gradient(107deg, rgb(130, 123, 121) 11.1%, rgb(119, 115, 110) 95.3%);
+    color:rgba(43, 32, 32, 0);
     -webkit-background-clip:text; 
     background-clip:text; 
+}
+.loginHeading{
+    color:black;
 }
 .container-form p{
    color: grey;
@@ -32,6 +35,9 @@
     height: 60px;
     position: relative;
     margin-top:30px ;
+}
+.loginImage{
+    width:250px;
 }
 .inputBox input{
     width: 100%;
@@ -66,7 +72,7 @@
     font-size: 19px;
     border: none;
     border-radius: 5px;
-    background: linear-gradient(107deg, rgb(255, 67, 5) 11.1%, rgb(245, 135, 0) 95.3%);
+    background: linear-gradient(107deg, rgb(111, 107, 106) 11.1%, rgb(31, 29, 27) 95.3%);
     cursor: pointer;
 }
 .FG{
