--- a/src/Components/Post/InputPost.css
+++ b/src/Components/Post/InputPost.css
@@ -1,10 +1,10 @@
 .i-form{
-    width: 100%;
+    width: 250%;
     min-height: 250px;
     margin: 20px auto 30px;
     padding: 5px 30px 30px 30px;
     border-radius: 20px;
-    background-color: #ffffff;
+    background-color: #efeeee;
 }
 
 .i-input-box{
@@ -22,6 +22,7 @@
     top: 50%;
     left: -5px;
     transform: translateY(-50%);
+    margin-bottom:20px;
 }
 #i-input{
     width: 100%;
@@ -53,7 +54,7 @@
     padding: 15px 60px;
     border-radius: 40px;
     border:none;
-    background: linear-gradient(107deg, rgb(255, 67, 5) 11.1%, rgb(245, 135, 0) 95.3%);
+    background: linear-gradient(107deg, rgb(237, 122, 201) 11.1%, rgb(235, 127, 186) 95.3%);
     color: #fff;
     font-size: 20px;
     cursor: pointer;
@@ -184,7 +185,7 @@
     .file-upload button{
         padding: 5px 20px;
         border-radius: 5px;
-        background-color:orangered;
+        background-color:rgb(238, 122, 195);
         color: #fff;
         font-size: 15x;
     }
